# ouroboros

./: .gitignore  README.md  docker-compose.yml
reconciler-core/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
reconciler-core/migrations/: V001__initial_schema.sql  V002__audit_immutable.sql  V003__indexes.sql  V004__bas_accounts.sql  V005__test_data.sql  V006__merchant_profiles.sql  V007__simple_transactions.sql
reconciler-core/nats/: nats.conf
reconciler-core/scripts/: setup-dev.sh
reconciler-core/seeds/: merchants.json
reconciler-core/src/: main.rs
reconciler-core/src/agents/: ap_automation.rs  audit_agent.rs  mod.rs  receipt_recovery.rs  vat_agent.rs
reconciler-core/src/ai/: confidence.rs
reconciler-core/src/api/: mod.rs
reconciler-core/src/auth/: clerk.rs
reconciler-core/src/communication/: email_templates.rs  mod.rs  response_parser.rs  smtp_sender.rs
reconciler-core/src/compliance/: audit.rs  chain_of_custody.rs  evidence_package.rs  failure_certificate.rs  jurisdiction.rs  mod.rs
reconciler-core/src/connectors/: enable_banking.rs  fortnox.rs  kivra.rs  mod.rs  nordea.rs  quickbooks.rs  revolut.rs  revolut_impl.rs  stripe_connector.rs  tink.rs  tink_impl.rs  visma.rs  xero.rs
reconciler-core/src/db/: connection.rs  mod.rs
reconciler-core/src/db/repositories/: merchants.rs  mod.rs  (+2 more)
reconciler-core/src/entities/: mod.rs
reconciler-core/src/events/: mod.rs
reconciler-core/src/graph/: economic_graph.rs  economic_timeline.rs  financial_graph.rs  mod.rs  trust_score.rs
reconciler-core/src/inbox/: imap_inbox.rs  mod.rs  receipt_parser.rs
reconciler-core/src/intelligence/: calibration.rs  entity_resolution.rs  merchant_graph.rs  merchant_resolver.rs  mod.rs
reconciler-core/src/invoice_networks/: peppol.rs
reconciler-core/src/ledger/: accounts.rs  journal.rs  mod.rs  mod_extra.txt
reconciler-core/src/liquidity/: cash_flow_forecast.rs  credit_engine.rs  liquidity_risk.rs  mod.rs  recovery_signal.rs  transparency.rs
reconciler-core/src/matching/: mod.rs
reconciler-core/src/models/: mod.rs
reconciler-core/src/observability/: mod.rs
reconciler-core/src/ocr/: fraud_detection.rs  mod.rs  parser.rs
reconciler-core/src/permissions/: mod.rs
reconciler-core/src/receipt_format/: mod.rs  proof.rs  schema.rs  signer.rs  verifier.rs
reconciler-core/src/retrieval/: circle_k.rs  clas_ohlson.rs  ica.rs  mod.rs  okq8.rs  scandic.rs
reconciler-core/src/sandbox/: bank_simulator.rs  data_generator.rs  erp_simulator.rs  mod.rs  scenario_runner.rs
reconciler-core/src/treasury/: mod.rs
reconciler-core/src/workflow/: escalation.rs  mod.rs  scheduler.rs  state_machine.rs
(+34 files in other folders)
