[package]
name = "reconciler-core"
version = "2.0.0"
edition = "2021"
description = "Reconciler — Global Financial Infrastructure Layer"

[[bin]]
name = "reconciler"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.33"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "1"
