[package]
name = "reconciler-core"
version = "2.0.0"
edition = "2021"
description = "Reconciler — Global Financial Infrastructure Layer"

[[bin]]
name = "reconciler"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "rust_decimal", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.33"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "1"
imap = { version = "3.0.0-alpha.15" }
mail-parser = "0.9"
regex = "1"
native-tls = "0.2"
once_cell = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
sha2 = "0.10"
zip = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
